軌跡バグ直した

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -81,8 +81,13 @@ Size=609,944
 Collapsed=0
 
 [Window][Debug]
-Pos=1394,215
+Pos=49,203
 Size=438,473
+Collapsed=1
+
+[Window][HumanoidBody]
+Pos=1320,77
+Size=544,866
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
