煙のエフェクト実装した

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Application\SourceCode\Effect\AirEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\AttackExplosionEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.cpp" />
+    <ClCompile Include="Application\SourceCode\Effect\SmokeEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Field\Sun.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\LogoExplosionEffect.cpp" />
@@ -302,6 +303,7 @@
     <ClInclude Include="Application\SourceCode\Effect\AttackExplosionEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\IEffect.h" />
+    <ClInclude Include="Application\SourceCode\Effect\SmokeEffect.h" />
     <ClInclude Include="Application\SourceCode\Field\Sun.h" />
     <ClInclude Include="Application\SourceCode\Motion\BackstepMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\BloodSprayEffect.h" />
@@ -644,6 +646,24 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\SmokeEffect\SmokeEffectInitCS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\SmokeEffect\SmokeEffectUpdateCS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\Effect\SmokeEffect\SmokeEffectVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Application\Shader\Grass\GrassGS.hlsl">
