--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Application\SourceCode\Effect\AttackExplosionEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\SmokeEffect.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\AirCollider.cpp" />
     <ClCompile Include="Application\SourceCode\Field\Sun.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\LogoExplosionEffect.cpp" />
@@ -304,6 +305,7 @@
     <ClInclude Include="Application\SourceCode\Effect\BossAttackTrajectoryEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\IEffect.h" />
     <ClInclude Include="Application\SourceCode\Effect\SmokeEffect.h" />
+    <ClInclude Include="Application\SourceCode\Field\AirCollider.h" />
     <ClInclude Include="Application\SourceCode\Field\Sun.h" />
     <ClInclude Include="Application\SourceCode\Motion\BackstepMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\BloodSprayEffect.h" />
